--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "test": "jest",
     "prepare": "husky install"
   },
+  "jest": {
+    "testEnvironment": "jsdom"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/grossomanache/202204-W3CHWE-elias-heresi.git"
@@ -14,11 +17,21 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "babel": {
+    "env": {
+      "test": {
+        "plugins": [
+          "@babel/plugin-transform-modules-commonjs"
+        ]
+      }
+    }
+  },
   "bugs": {
     "url": "https://github.com/grossomanache/202204-W3CHWE-elias-heresi/issues"
   },
   "homepage": "https://github.com/grossomanache/202204-W3CHWE-elias-heresi#readme",
   "devDependencies": {
+    "@babel/plugin-transform-modules-commonjs": "^7.17.9",
     "eslint": "^8.13.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.5.0",
